src/objects/Secondary_Sales__c.object
<CustomObject>
    <label>Secondary Sales</label>
    <nameField>
        <label>Secondary Sales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secondary Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Secondary Sales</relationshipLabel>
        <relationshipName>Secondary_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>